# invres_steganalysis

./: LICENCE  README.md  pyproject.toml
components/: inverted_residual.py  preprocessing_conv2d.py  preprocessing_convolution.py  spatial_pyramid_pooling.py  srm_filter_weights.py
dataset_generation/: README.md  mat2png.py  parallel_HUGO.m  parallel_S_UNIWARD.m  parallel_WOW.m
src/invres_steganalysis/: __init__.py  dataset.py  inverted_residual.py  invres_model.py  preprocessing_convolution.py
