[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "invres_steganalysis"
description = "To Be Described"
readme = "README.md"
version = "0.0.1"
dependencies = [
	"lightning",
	"torchvision",
	"scikit-learn"
]
requires-python = ">= 3.11"

[project.scripts]
invres = "invres_steganalysis:main_cli"
